previous/test/pre-test/another.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-sec
  namespace: test
spec:
  containers:
    - name: nginx-sec
      image: nginx
      env:
        - name: OPTIONS
          valueFrom:
            configMapKeyRef:
              # The ConfigMap containing the value you want to assign to SPECIAL_LEVEL_KEY
              name: anotherone
              # Specify the key associated with the value
              key: var6
              key: var7


  restartPolicy: Never
