previous/test/pre-test/cpumemorylimit.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cpumemorylimit
  namespace: test
spec:
  containers:
  - name: cpumemorylimit
    image: nginx
    resources:
      limits:
        cpu: "200m"
      requests:
        cpu: "100m"
      requests:
        memory: "256Mi"
      limits:
        memory: "512Mi"

        #    args:
            #    - -cpus
      #    - "2"
      # args: ["--vm", "1", "--vm-bytes", "250M", "--vm-hang", "1"]
