previous/test/pre-test/liveliness.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-live
  name: nginx-live
  namespace: test
spec:
  containers:
  - image: nginx
    name: nginx-live
    resources: {}
    livenessProbe: # add
      exec:        # add
        command:   # add
        - ls       # add
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
