previous/test/pre-test/multipod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
  namespace: test
spec:
  containers:
  - image: nginx
    name: nginx
  - image: redis
    name: redis
  - image: tomcat
    name: tomcat
