previous/test/pre-test/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-nginx
spec:
  podSelector:
    matchLabels:
      app: nginx-last # selector for the pods
  ingress:            # allow ingress traffic
  - from:
    - podSelector:    # from pods
        matchLabels:  # with this label
          access: granted
