previous/test/pre-test/pod_readiness.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-ready
  name: nginx-ready
  namespace: test
spec:
  containers:
  - image: nginx
    name: nginx-ready
    ports:
    - containerPort: 80
    readinessProbe:
      httpGet:
        path: /usr/share/nginx/html/index.html
        port: 80
      failureThreshold: 1
      periodSeconds: 10
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
