previous/test/pre-test/volumeconfig.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-cm
  namespace: test
spec:
  containers:
    - name: nginx-cm
      image: nginx
      #command: [ "/bin/sh", "-c", "ls /etc/config/" ]
      volumeMounts:
      - name: config-volume
        mountPath: /etc/spartaa
  volumes:
    - name: config-volume
      configMap:
        # Provide the name of the ConfigMap containing the files you want
        # to add to the container
        name: cmvolume
  restartPolicy: Never
